fixing scrollbar issue

--- a/assets/css/bankDetails.css
+++ b/assets/css/bankDetails.css
@@ -128,9 +128,15 @@
     padding-right: 10px;
 }
 
-.review_modal_close_icon {
+.review_modal_close_icon_edit {
     margin-left: 93%;
     margin-top: 3%;
+
+}
+
+.review_modal_close_icon_TandC {
+    margin-left: 96.5%;
+    margin-top: 1.7%;
 
 }
 
@@ -182,6 +188,7 @@
 
 .reviewModalBody {
     padding: 20px 40px 40px 40px;
+    margin-bottom: 7%;
 }
 
 .review_button_section {
@@ -191,23 +198,48 @@
 }
 
 .TandCmodal {
+   
+}
+
+.scroll_modal {
     width: 100%;
-    height: 70vh;
+    height: 90%;
     overflow: hidden;
 }
 
-.modalEdit{
+/* width */
+.scroll_modal ::-webkit-scrollbar {
+    width: 4px;
+}
+
+/* Track */
+.scroll_modal  ::-webkit-scrollbar-track {
+    background: #bfc1c2;
+}
+
+/* Handle */
+.scroll_modal  ::-webkit-scrollbar-thumb {
+    background: #626567;
+    border-radius: 20px;
+}
+
+/* Handle on hover */
+.scroll_modal  ::-webkit-scrollbar-thumb:hover {
+    background: #626567;
+}
+
+.modalEdit {
     overflow: hidden;
 }
 
-.review_modal{
+.review_modal {
     border-radius: 8px;
-    margin:auto;
 }
 
-.reviewModalBody{
+.reviewModalBody {
     position: relative;
 }
+
 .review_button_section_TandC {
     box-shadow: 0px -2px 12px 0px #00000040;
     background-color: #FFFFFF;
@@ -215,7 +247,7 @@
     flex-direction: column;
     justify-content: center;
     position: absolute;
-    bottom: 0;
+    bottom: 10px;
     width: 100%;
     padding: 20px;
 }
@@ -231,7 +263,7 @@
     border: 1px solid transparent;
 }
 
-.reviewModalsubHead_TandC{
+.reviewModalsubHead_TandC {
     font-size: 14px;
     font-weight: 500;
     color: #221F20;
@@ -242,19 +274,21 @@
     margin-right: 24px;
 }
 
-.bankDeatilsRadio[type="radio"]:checked, .bankDeatilsRadio[type="radio"]:not(:checked) {
+.bankDeatilsRadio[type="radio"]:checked,
+.bankDeatilsRadio[type="radio"]:not(:checked) {
     position: absolute;
     left: -9999px;
     width: 0;
     height: 0;
     visibility: hidden;
 }
-.checkbox-tools:checked + label {
-    /* background-color: transparent; */
-    /* box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2); */
+
+.checkbox-tools:checked+label {
     border: 1.5px solid #221F20 !important;
 }
-.checkbox-tools:checked + label, .checkbox-tools:not(:checked) + label {
+
+.checkbox-tools:checked+label,
+.checkbox-tools:not(:checked)+label {
     position: relative;
     display: inline-block;
     padding: 6px;
@@ -273,15 +307,17 @@
     transition: all 300ms linear;
     border: 1.5px solid #8C989F;
 }
+
 .paymentIcon {
     width: 26px;
     height: auto;
 }
+
 .newtopborder {
     border-top: 2px solid #8c989f;
     padding-top: 20px;
 }
 
-.custome-d-flex{
-display: flex;
+.custome-d-flex {
+    display: flex;
 }
